# harness-deck

./: .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled-skills/intake-source-research/: SKILL.md
src-tauri/bundled-skills/local-harness-review/: SKILL.md
src-tauri/bundled-skills/normalize-practice-card/: SKILL.md
src-tauri/icons/: icon.icns
src-tauri/src/: byoa_tests.rs  db_tests.rs  intake_tests.rs  lib.rs  loop_tests.rs  main.rs  operations_tests.rs  phase1_tests.rs  phase2_3_tests.rs  phase4_5_tests.rs  phase6_8_tests.rs  projection_tests.rs  skill_tests.rs  target_adapter_tests.rs
src-tauri/src/commands/: account_commands.rs  app_commands.rs  byoa_commands.rs  crawl_commands.rs  db_commands.rs  deploy_commands.rs  insight_commands.rs  intake_commands.rs  loop_commands.rs  mod.rs  operations_commands.rs  profile_commands.rs  projection_commands.rs  registry_commands.rs  skill_commands.rs  target_commands.rs  usage_commands.rs  wake_commands.rs
src-tauri/src/db/: asset_repo.rs  audit_repo.rs  auth_repo.rs  mod.rs  ops_repo.rs  practice_repo.rs  projection_repo.rs  refresh_repo.rs  registry_repo.rs  schema.rs  signal_repo.rs  skill_config_repo.rs  source_config_repo.rs
src-tauri/src/domain/: account_workspace.rs  adapter.rs  app.rs  audit.rs  auth_state.rs  byoa.rs  crawl.rs  deploy_plan.rs  errors.rs  insights.rs  local_asset.rs  loop_summary.rs  manifest.rs  mod.rs  ops_script.rs  practice.rs  profile.rs  projection.rs  projection_plan.rs  refresh.rs  registry.rs  registry_connection.rs  signal.rs  source_config.rs  sync_governance.rs  system_skill.rs  target_integration.rs  usage.rs  wake_control.rs
src-tauri/src/readers/: claude_reader.rs  codex_reader.rs  mod.rs  sanitizer.rs  skill_scanner.rs
src-tauri/src/services/: account_service.rs  adapter_service.rs  app_paths.rs  byoa_service.rs  crawl_service.rs  insight_service.rs  install_service.rs  intake_service.rs  loop_service.rs  mod.rs  operations_service.rs  privacy_service.rs  profile_service.rs  projection_service.rs  registry_service.rs  secret_service.rs  skill_service.rs  storage_service.rs  sync_governance_service.rs  target_adapter.rs  target_integration_service.rs  (+2 more)
(+160 files in other folders)
