[package]
name = "harness-deck"
version = "0.1.0"
description = "Local-first AI agent profile, sync, usage, and guard workbench"
authors = ["jiechen"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "harness_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2.3.2", features = ["tray-icon"] }
toml = "0.8"
gray_matter = { version = "0.3.2", default-features = false, features = ["yaml"] }
fs_extra = "1.3"
keyring = { version = "2.3.3", default-features = false, features = ["platform-macos"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = "0.4"
ulid = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["time", "macros"] }

[dev-dependencies]
tempfile = "3"
